created product level interactions

--- a/notebook_eda.ipynb
+++ b/notebook_eda.ipynb
@@ -39,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -836,6 +843,13 @@
    "source": [
     "Doubts\n",
     "If order_id is unique identifier for each order, oka user suppose user_id = 1 multiple times order chesthe appudu each time different order ids generate avtai kada, so appudu order_id ane unknown number meeda manam predictions ela generate chestam?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploratory data analysis"
    ]
   },
   {
@@ -1877,6 +1891,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "why is the colour pallete not updated here?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Most of the orders have come from Sunday"
    ]
   },
@@ -2909,12 +2930,297 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p_reorder_ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>product_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.613391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.133333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.732852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.446809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.600000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            p_reorder_ratio\n",
+       "product_id                 \n",
+       "1                  0.613391\n",
+       "2                  0.133333\n",
+       "3                  0.732852\n",
+       "4                  0.446809\n",
+       "5                  0.600000"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reorder ratio for each product id - total number of times it was reordered/total number of times it was purchased\n",
+    "p_reorder = prior_orders.groupby('product_id')['reordered'].agg('mean').to_frame('p_reorder_ratio')\n",
+    "p_reorder.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p_avg_cart_position</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>product_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.801836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.415162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.507599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6.466667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            p_avg_cart_position\n",
+       "product_id                     \n",
+       "1                      5.801836\n",
+       "2                      9.888889\n",
+       "3                      6.415162\n",
+       "4                      9.507599\n",
+       "5                      6.466667"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Avg add to cart order for each product\n",
+    "p_add_to_cart = prior_orders.groupby('product_id')['add_to_cart_order'].agg('mean').to_frame('p_avg_cart_position')\n",
+    "p_add_to_cart.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merging all the product id tables to create product level interaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>p_num_of_times</th>\n",
+       "      <th>p_reorder_ratio</th>\n",
+       "      <th>p_avg_cart_position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1852</td>\n",
+       "      <td>0.613391</td>\n",
+       "      <td>5.801836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.133333</td>\n",
+       "      <td>9.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>277</td>\n",
+       "      <td>0.732852</td>\n",
+       "      <td>6.415162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>329</td>\n",
+       "      <td>0.446809</td>\n",
+       "      <td>9.507599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>6.466667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id  p_num_of_times  p_reorder_ratio  p_avg_cart_position\n",
+       "0           1            1852         0.613391             5.801836\n",
+       "1           2              90         0.133333             9.888889\n",
+       "2           3             277         0.732852             6.415162\n",
+       "3           4             329         0.446809             9.507599\n",
+       "4           5              15         0.600000             6.466667"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prd = pd.concat([prd_bought, p_reorder, p_add_to_cart], axis = 1).reset_index()\n",
+    "prd.rename(columns = {'index':'product_id'})\n",
+    "prd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#deleting unwanted df.\n",
+    "del [prd_bought, p_reorder, p_add_to_cart]\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating features between user and product\n",
+    "User - Product level interaction"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "prior_orders.groupby('product_id')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
