--- a/xgbbost.ipynb
+++ b/xgbbost.ipynb
@@ -2,21 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "##"
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary packages\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Building"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing the necessary packages.\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, KFold\n",
+    "from sklearn.metrics import f1_score, classification_report\n",
+    "#from scikitplot.metrics import plot_confusion_matrix\n",
+    "#from scikitplot.classifiers import plot_feature_importances\n",
+    "\n",
+    "#importing model packages.\n",
+    "import xgboost as xgb\n",
+    "import lightgbm as lgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train = pd.read_csv('./data/train_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating X and y variables.\n",
+    "X = data_train.drop(['reordered', 'uxp_ratio_last_five'], axis=1)\n",
+    "y = data_train.reordered\n",
+    "\n",
+    "#splitting dataset into train and test split.\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
