--- a/xgbbost.ipynb
+++ b/xgbbost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,34 @@
     "\n",
     "#importing model packages.\n",
     "import xgboost as xgb\n",
-    "import lightgbm as lgb"
+    "import lightgbm as lgb\n",
+    "import mlflow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='file:///Users/madhuri/Documents/instacart_analysis/mlruns/409450851093224200', creation_time=1741387367950, experiment_id='409450851093224200', last_update_time=1741387367950, lifecycle_stage='active', name='XGBoost_GridSearchCV_Experiment', tags={}>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set the MLflow experiment name\n",
+    "mlflow.set_experiment(\"XGBoost_GridSearchCV_Experiment\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +91,108 @@
     "\n",
     "#splitting dataset into train and test split.\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the XGBoost model\n",
+    "model = xgb.XGBClassifier(random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the hyperparameter grid\n",
+    "param_grid = {\n",
+    "    'max_depth': [3, 5],\n",
+    "    'learning_rate': [0.01, 0.1],\n",
+    "    'n_estimators': [100, 150],\n",
+    "    'subsample': [0.8, 1.0],\n",
+    "    'colsample_bytree': [0.8, 1.0],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 32 candidates, totalling 160 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.11/site-packages/xgboost/core.py:158: UserWarning: [12:49:31] WARNING: /Users/runner/work/xgboost/xgboost/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "\u001b[31m2025/03/08 12:49:35 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best CV F1 Score: 0.2679153847536591\n",
+      "Test F1 Score: 0.26590361025816533\n",
+      "Best Parameters: {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 100, 'subsample': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start an MLflow run\n",
+    "with mlflow.start_run():\n",
+    "    # Initialize GridSearchCV\n",
+    "    grid_search = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid,\n",
+    "        scoring='f1',\n",
+    "        cv=5,\n",
+    "        verbose=1,\n",
+    "        n_jobs=-1\n",
+    "    )\n",
+    "\n",
+    "    # Fit the model\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "    # Log the best parameters and metrics\n",
+    "    best_params = grid_search.best_params_\n",
+    "    best_score = grid_search.best_score_\n",
+    "\n",
+    "    mlflow.log_params(best_params)\n",
+    "    mlflow.log_metric(\"best_cv_f1_score\", best_score)\n",
+    "\n",
+    "    # Evaluate the best model on the test set\n",
+    "    best_model = grid_search.best_estimator_\n",
+    "    y_pred = best_model.predict(X_test)\n",
+    "    test_f1_score = f1_score(y_test, y_pred)\n",
+    "\n",
+    "    mlflow.log_metric(\"test_f1_score\", test_f1_score)\n",
+    "\n",
+    "    # Log the best model\n",
+    "    mlflow.xgboost.log_model(best_model, \"best_model\")\n",
+    "\n",
+    "    print(f\"Best CV F1 Score: {best_score}\")\n",
+    "    print(f\"Test F1 Score: {test_f1_score}\")\n",
+    "    print(f\"Best Parameters: {best_params}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why am i getting such a low F-1 score? - like 0.26 - something is wrong, I need to check it out."
    ]
   },
   {
