--- a/notebook_eda.ipynb
+++ b/notebook_eda.ipynb
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1844,7 @@
     "custom_palette = [\"#7AB\", \"#EDA\", \"#7AB\", \"#EDA\", \"#7AB\", \"#EDA\", \"#7AB\"]\n",
     "# Set the global palette\n",
     "sns.set_palette(custom_palette)\n",
-    "sns.histplot(data = orders.groupby(['user_id'])['order_number'].count(), kde = True, )"
+    "sns.histplot(data = orders.groupby(['user_id'])['order_number'].count(), kde = True)"
    ]
   },
   {
@@ -5449,6 +5449,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train and test ni merge cheydam enti? i dont understand?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
@@ -6538,6 +6545,15 @@
     "        mean = data_train.groupby(col).reordered.mean()\n",
     "        data_train[col] = data_train[col].map(mean)\n",
     "        data_test[col] = data_test[col].map(mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What it does: This performs mean encoding on the aisle_id and department_id columns. Mean encoding replaces each category with the mean value of the target variable (reordered) for that category.\n",
+    "\n",
+    "Intuition: Mean encoding captures the relationship between categorical variables (aisle and department) and the target variable. For example, if products in a specific aisle have a high reorder rate, the model can learn this pattern and use it to make better predictions."
    ]
   },
   {
