--- a/xgbbost.ipynb
+++ b/xgbbost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,338 @@
     "\n",
     "#splitting dataset into train and test split.\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "why the column uxp ratio last five is dropped?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uxp_times_bought</th>\n",
+       "      <th>uxp_reorder_ratio</th>\n",
+       "      <th>uxp_last_five</th>\n",
+       "      <th>u_num_of_orders</th>\n",
+       "      <th>dow_u_most_orders</th>\n",
+       "      <th>hod_u_most_orders</th>\n",
+       "      <th>u_reorder_ratio</th>\n",
+       "      <th>avg_days_between_orders</th>\n",
+       "      <th>u_avg_prd</th>\n",
+       "      <th>u_total_iems_bought</th>\n",
+       "      <th>p_num_of_times</th>\n",
+       "      <th>p_reorder_ratio</th>\n",
+       "      <th>p_avg_cart_position</th>\n",
+       "      <th>aisle_id</th>\n",
+       "      <th>department_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4002577</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.792233</td>\n",
+       "      <td>4.323301</td>\n",
+       "      <td>17.166667</td>\n",
+       "      <td>1030</td>\n",
+       "      <td>11165</td>\n",
+       "      <td>0.701120</td>\n",
+       "      <td>7.856068</td>\n",
+       "      <td>0.130793</td>\n",
+       "      <td>0.110109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1829944</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.043478</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.693642</td>\n",
+       "      <td>14.568401</td>\n",
+       "      <td>20.760000</td>\n",
+       "      <td>519</td>\n",
+       "      <td>5943</td>\n",
+       "      <td>0.683661</td>\n",
+       "      <td>7.991082</td>\n",
+       "      <td>0.103269</td>\n",
+       "      <td>0.128506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2402250</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.675000</td>\n",
+       "      <td>10.518182</td>\n",
+       "      <td>24.444444</td>\n",
+       "      <td>440</td>\n",
+       "      <td>2222</td>\n",
+       "      <td>0.389289</td>\n",
+       "      <td>9.414041</td>\n",
+       "      <td>0.103269</td>\n",
+       "      <td>0.128506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82405</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.663462</td>\n",
+       "      <td>15.858974</td>\n",
+       "      <td>16.421053</td>\n",
+       "      <td>312</td>\n",
+       "      <td>9113</td>\n",
+       "      <td>0.337101</td>\n",
+       "      <td>9.369911</td>\n",
+       "      <td>0.038712</td>\n",
+       "      <td>0.037791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5425927</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.466102</td>\n",
+       "      <td>19.296610</td>\n",
+       "      <td>13.111111</td>\n",
+       "      <td>118</td>\n",
+       "      <td>2652</td>\n",
+       "      <td>0.659879</td>\n",
+       "      <td>8.028281</td>\n",
+       "      <td>0.109664</td>\n",
+       "      <td>0.104196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7950376</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.043478</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.771676</td>\n",
+       "      <td>13.101156</td>\n",
+       "      <td>13.307692</td>\n",
+       "      <td>346</td>\n",
+       "      <td>345</td>\n",
+       "      <td>0.356522</td>\n",
+       "      <td>9.568116</td>\n",
+       "      <td>0.099790</td>\n",
+       "      <td>0.114196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1917199</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.384615</td>\n",
+       "      <td>27.538462</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>91</td>\n",
+       "      <td>6572</td>\n",
+       "      <td>0.626141</td>\n",
+       "      <td>8.305234</td>\n",
+       "      <td>0.118036</td>\n",
+       "      <td>0.091813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3406030</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.517483</td>\n",
+       "      <td>13.195804</td>\n",
+       "      <td>9.533333</td>\n",
+       "      <td>143</td>\n",
+       "      <td>1221</td>\n",
+       "      <td>0.425880</td>\n",
+       "      <td>8.938575</td>\n",
+       "      <td>0.066931</td>\n",
+       "      <td>0.086078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3265577</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.019608</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.697743</td>\n",
+       "      <td>5.524043</td>\n",
+       "      <td>12.580247</td>\n",
+       "      <td>1019</td>\n",
+       "      <td>492</td>\n",
+       "      <td>0.638211</td>\n",
+       "      <td>7.154472</td>\n",
+       "      <td>0.081223</td>\n",
+       "      <td>0.110109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7087561</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.240385</td>\n",
+       "      <td>18.980769</td>\n",
+       "      <td>10.400000</td>\n",
+       "      <td>104</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.410000</td>\n",
+       "      <td>9.030000</td>\n",
+       "      <td>0.106566</td>\n",
+       "      <td>0.086078</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2542399 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         uxp_times_bought  uxp_reorder_ratio  uxp_last_five  u_num_of_orders  \\\n",
+       "4002577                 1           0.500000            1.0               60   \n",
+       "1829944                 1           0.043478            0.0               25   \n",
+       "2402250                 1           0.111111            0.0               18   \n",
+       "82405                   5           0.500000            2.0               19   \n",
+       "5425927                 1           0.111111            0.0                9   \n",
+       "...                   ...                ...            ...              ...   \n",
+       "7950376                 1           0.043478            0.0               26   \n",
+       "1917199                 2           0.285714            1.0                7   \n",
+       "3406030                 1           0.166667            0.0               15   \n",
+       "3265577                 1           0.019608            0.0               81   \n",
+       "7087561                 1           0.200000            1.0               10   \n",
+       "\n",
+       "         dow_u_most_orders  hod_u_most_orders  u_reorder_ratio  \\\n",
+       "4002577                  6                 15         0.792233   \n",
+       "1829944                  3                 12         0.693642   \n",
+       "2402250                  0                 23         0.675000   \n",
+       "82405                    1                 18         0.663462   \n",
+       "5425927                  4                 14         0.466102   \n",
+       "...                    ...                ...              ...   \n",
+       "7950376                  5                 13         0.771676   \n",
+       "1917199                  5                 18         0.384615   \n",
+       "3406030                  1                 12         0.517483   \n",
+       "3265577                  0                 20         0.697743   \n",
+       "7087561                  0                 16         0.240385   \n",
+       "\n",
+       "         avg_days_between_orders  u_avg_prd  u_total_iems_bought  \\\n",
+       "4002577                 4.323301  17.166667                 1030   \n",
+       "1829944                14.568401  20.760000                  519   \n",
+       "2402250                10.518182  24.444444                  440   \n",
+       "82405                  15.858974  16.421053                  312   \n",
+       "5425927                19.296610  13.111111                  118   \n",
+       "...                          ...        ...                  ...   \n",
+       "7950376                13.101156  13.307692                  346   \n",
+       "1917199                27.538462  13.000000                   91   \n",
+       "3406030                13.195804   9.533333                  143   \n",
+       "3265577                 5.524043  12.580247                 1019   \n",
+       "7087561                18.980769  10.400000                  104   \n",
+       "\n",
+       "         p_num_of_times  p_reorder_ratio  p_avg_cart_position  aisle_id  \\\n",
+       "4002577           11165         0.701120             7.856068  0.130793   \n",
+       "1829944            5943         0.683661             7.991082  0.103269   \n",
+       "2402250            2222         0.389289             9.414041  0.103269   \n",
+       "82405              9113         0.337101             9.369911  0.038712   \n",
+       "5425927            2652         0.659879             8.028281  0.109664   \n",
+       "...                 ...              ...                  ...       ...   \n",
+       "7950376             345         0.356522             9.568116  0.099790   \n",
+       "1917199            6572         0.626141             8.305234  0.118036   \n",
+       "3406030            1221         0.425880             8.938575  0.066931   \n",
+       "3265577             492         0.638211             7.154472  0.081223   \n",
+       "7087561             100         0.410000             9.030000  0.106566   \n",
+       "\n",
+       "         department_id  \n",
+       "4002577       0.110109  \n",
+       "1829944       0.128506  \n",
+       "2402250       0.128506  \n",
+       "82405         0.037791  \n",
+       "5425927       0.104196  \n",
+       "...                ...  \n",
+       "7950376       0.114196  \n",
+       "1917199       0.091813  \n",
+       "3406030       0.086078  \n",
+       "3265577       0.110109  \n",
+       "7087561       0.086078  \n",
+       "\n",
+       "[2542399 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
    ]
   },
   {
@@ -189,10 +521,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 0.4308267960906295\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.94      0.91      0.93   2294232\n",
+      "         1.0       0.38      0.50      0.43    248167\n",
+      "\n",
+      "    accuracy                           0.87   2542399\n",
+      "   macro avg       0.66      0.70      0.68   2542399\n",
+      "weighted avg       0.89      0.87      0.88   2542399\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "logged_model = 'runs:/8cd01ee0e7634f509fe6e1b669b7b426/best_model'\n",
+    "\n",
+    "\n",
+    "# Load the model directly as an XGBoost model\n",
+    "xgboost_model = mlflow.xgboost.load_model(logged_model)\n",
+    "# Predict probabilities on the test set\n",
+    "y_proba = xgboost_model.predict_proba(X_test)[:, 1]  # Get probabilities for the positive class\n",
+    "\n",
+    "# Apply a threshold to convert probabilities to binary predictions\n",
+    "threshold = 0.21\n",
+    "y_pred = (y_proba >= threshold).astype('int')\n",
+    "\n",
+    "# Evaluation\n",
+    "print('F1 Score: {}'.format(f1_score(y_test, y_pred)))  # Correct order: (y_true, y_pred)\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why am i getting such a low F-1 score? - like 0.26 - something is wrong, I need to check it out."
+    "why is the threshold set to 0.21? - maybe business objective\n",
+    "but why are we considering only positive class probabilities?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.877651  , 0.12234903],\n",
+       "       [0.9868439 , 0.0131561 ],\n",
+       "       [0.9753787 , 0.0246213 ],\n",
+       "       ...,\n",
+       "       [0.97221863, 0.02778138],\n",
+       "       [0.99433416, 0.00566586],\n",
+       "       [0.9684475 , 0.03155249]], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgboost_model.predict_proba(X_test)"
    ]
   },
   {
